syntax = "proto3";

message Hello {
  int32 version = 1;
  int32 rate_limit = 3; // maximum number of messages per hour
}

message EncryptedMessage {
  message TBS {
    bytes channel_id = 1;
    bytes encrypted_content = 3;
  }

  TBS tbs = 1;
}

message Link {
  message TBS {
    bytes trustee_pub_key = 1;
    double expiration = 2;
    string display_name = 3;
  }

  TBS tbs = 1;
  bytes signature = 2;
}

message LinkRequest {
  bytes trustee_pub_key = 1;
  string desired_display_name = 2;
}

message LinkArray {
  repeated Link links = 1;
}

message Message {
  message TBS {
    LinkArray chain = 1;
    string content = 2; // JSON
  }

  TBS tbs = 1;
  bytes signature = 2;
}

message Subscribe {
  repeated bytes channel_id = 1;
}

message Unsubscribe {
  repeated bytes channel_id = 1;
}

message Packet {
  oneof content {
    EncryptedMessage msg = 1;
    Subscribe subscribe = 2;
    Unsubscribe unsubscribe = 3;
  }
}
